third_party/rust/cxx/v1/crate/tests/ui/empty_struct.rs
#[cxx::bridge]
mod ffi {
    struct Empty {}
}

fn main() {}
